--- a/package.json
+++ b/package.json
@@ -4,34 +4,50 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "start:api": "nx serve api",
+    "start:front": "nx serve front",
+    "start:launchpage": "nx serve launchpage",
+    "component:create": "nx g @nrwl/react:component",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "graph": "nx graph"
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
+    "@tailwindcss/forms": "^0.5.3",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "14.8.3",
     "@nrwl/cypress": "14.8.3",
     "@nrwl/eslint-plugin-nx": "14.8.3",
+    "@nrwl/express": "^14.8.3",
     "@nrwl/jest": "14.8.3",
     "@nrwl/linter": "14.8.3",
+    "@nrwl/node": "14.8.3",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "14.8.3",
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
     "@testing-library/react": "13.4.0",
+    "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.12",
     "babel-jest": "28.1.1",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
@@ -44,6 +60,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.8.3",
+    "postcss": "8.4.16",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
