--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "auth0-js": "^9.19.1",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jotai": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.1",
@@ -39,9 +42,10 @@
     "@nrwl/web": "14.8.3",
     "@nrwl/workspace": "14.8.3",
     "@testing-library/react": "13.4.0",
+    "@types/auth0-js": "^9.14.6",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
