--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.1.8",
+    "talkr": "^3.3.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "10.4.12",
     "babel-jest": "28.1.1",
+    "babel-plugin-inline-json-import": "^0.3.2",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
