--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@supabase/supabase-js": "^2.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "auth0-js": "^9.19.1",
     "core-js": "^3.6.5",
