--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/query-core": "^4.12.0",
     "auth0-js": "^9.19.1",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
